--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ memlib = "0.1.1"
 log = "0.4.22"
 serde = { version = "1.0.214", features = ["derive"] }
 linkme = "0.3.29"
+sysinfo = "0.32.0"
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.58.0", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_Diagnostics_Debug"] }
+
