--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,5 @@ linkme = "0.3.29"
 sysinfo = "0.32.0"
 
 [target.'cfg(windows)'.dependencies]
-windows = { version = "0.58.0", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_Diagnostics_Debug"] }
+windows = { version = "0.58.0", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp"] }
 
