--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2021"
 [dependencies]
 memlib = "0.1.1"
 log = "0.4.22"
+env_logger = "0.11.5"
 serde = { version = "1.0.214", features = ["derive"] }
 linkme = "0.3.29"
 sysinfo = "0.32.0"
+rand = "0.9.0-alpha.2"
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.58.0", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp"] }
