--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ linkme = "0.3.29"
 sysinfo = "0.32.0"
 rand = "0.9.0-alpha.2"
 memoffset = "0.9.1"
+glam = "0.29.2"
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.58.0", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp"] }
